--- a/index.html
+++ b/index.html
@@ -172,5 +172,9 @@
     <p id="eta" class="info">
     </p>
   </div>
+
+  <div id="aboutLinks">
+    <a href="https://github.com/harry-wood/linear-time-calculator">code on github</a>
+  </div>
 </body>
 </html>
