Set narrower text field widths
The text input boxes are quite wide which may cause horizontal scrollbars on mobile. Fix in CSS to be no wider than they need to be to show date times.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
     }
     input {
         font-size:1.1em;
+        width: 150px;
     }
+    input#startDate, input#currentDate {
+        width: 250px;
+    }
+
     .valid {
         border: solid 2px green;
     }
